--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,6 +20,7 @@ appName = business-registration-notification
 
 # Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 
 # Play Modules
 # ~~~~
