--- a/conf/application.conf
+++ b/conf/application.conf
@@ -20,6 +20,7 @@ appName = business-registration-notification
 
 # Default http client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 
 # Play Modules
 # ~~~~
@@ -69,13 +70,11 @@ controllers {
   confidenceLevel = 300
 
   controllers.Ping = {
-    needsAuth = false
     needsLogging = true
     needsAuditing = false
   }
 
   controllers.NotificationController = {
-    needsAuth = false
     needsLogging = true
     needsAuditing = false
   }
